crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__bin_op__named_expression.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/bin_op/named_expression.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..26,
        body: Suite {
            range: 0..26,
            node_index: NodeIndex(None),
            statements: [
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 0..5,
                        value: BinOp(
                            ExprBinOp {
                                node_index: NodeIndex(None),
                                range: 0..5,
                                left: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 0..1,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                                op: Sub,
                                right: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 4..5,
                                        id: Name("y"),
                                        ctx: Load,
                                    },
                                ),
                            },
                        ),
                    },
                ),
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 9..15,
                        value: Tuple(
                            ExprTuple {
                                node_index: NodeIndex(None),
                                range: 9..15,
                                elts: [
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(None),
                                            range: 10..11,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(None),
                                            range: 13..14,
                                            value: Int(
                                                2,
                                            ),
                                        },
                                    ),
                                ],
                                ctx: Load,
                                parenthesized: true,
                            },
                        ),
                    },
                ),
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 16..21,
                        value: BinOp(
                            ExprBinOp {
                                node_index: NodeIndex(None),
                                range: 16..21,
                                left: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 16..17,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                                op: Div,
                                right: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 20..21,
                                        id: Name("y"),
                                        ctx: Load,
                                    },
                                ),
                            },
                        ),
                    },
                ),
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 25..26,
                        value: NumberLiteral(
                            ExprNumberLiteral {
                                node_index: NodeIndex(None),
                                range: 25..26,
                                value: Int(
                                    2,
                                ),
                            },
                        ),
                    },
                ),
            ],
        },
    },
)
```
## Errors

  |
1 | x - y := (1, 2)
  |       ^^ Syntax Error: Expected a statement
2 | x / y := 2
  |


  |
1 | x - y := (1, 2)
2 | x / y := 2
  |       ^^ Syntax Error: Expected a statement
  |
